@@ -1,31 +1,35 @@
 <?php
+/**
+  *
+  * SourceForge Documentaion Manager
+  *
+  * SourceForge: Breaking Down the Barriers to Open Source Development
+  * Copyright 1999-2001 (c) VA Linux Systems
+  * http://sourceforge.net
+  *
+  * @version   $Id$
+  *
+  */
 
-//
-// SourceForge: Breaking Down the Barriers to Open Source Development
-// Copyright 1999-2000 (c) The SourceForge Crew
-// http://sourceforge.net
-//
-//
 
 /*
-        Docmentation Manager
         by Quentin Cregan, SourceForge 06/2000
 */
 
-require('../docman/doc_utils.php');
-require('pre.php');
+require_once('doc_utils.php');
+require_once('pre.php');
 
 if ($group_id) {
 
-	if (!($language_id)) {
-		if (!($language_id = user_get_language())) {
+	if (!$language_id) {
+			if (!($language_id = user_get_language())) {
 			// default to English
 			$language_id = 1;
 		}
 	}
 
 	$usermem = user_ismember($group_id);
-	docman_header('Project Documentation','Project Documentation');
+	docman_header('Project Documentation','Project Documentation','docman','',group_getname($group_id));
 	//get a list of group numbers that this project owns
 	$query = "select * "
 		."from doc_groups "
